--- a/package.json
+++ b/package.json
@@ -12,12 +12,43 @@
   },
   "keywords": [
     "react-scripts",
-    "custom-scripts"
+    "custom-scripts",
+    "create-react-app"
   ],
   "author": "Federico Knüssel <fknussel@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/fknussel/custom-scripts/issues"
   },
-  "homepage": "https://github.com/fknussel/custom-scripts#readme"
+  "homepage": "https://github.com/fknussel/custom-scripts#readme",
+  "dependencies": {
+    "autoprefixer": "^6.5.2",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.11.1",
+    "chalk": "^1.1.3",
+    "css-loader": "^0.26.0",
+    "eslint": "^3.11.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.6.0",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "file-loader": "0.10.0",
+    "fs-extra": "^2.0.0",
+    "lodash": "^4.17.4",
+    "postcss-loader": "^1.1.0",
+    "postcss-modules-values": "^1.1.3",
+    "precss": "^1.4.0",
+    "react-hot-loader": "3.0.0-beta.6",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.5.0",
+    "stylelint-config-standard": "16.0.0",
+    "stylelint-order": "^0.2.2",
+    "stylelint-webpack-plugin": "0.5.1",
+    "url-loader": "^0.5.7",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3.0",
+    "webpack-version-file": "^0.1.2"
+  }
 }
