--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "custom-scripts",
   "version": "0.0.0",
   "description": "A production-ready alternative to react-scripts",
-  "main": "index.js",
+  "bin": {
+    "custom-scripts": "./bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=4"
   },
   "repository": {
     "type": "git",
@@ -28,6 +33,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
     "chalk": "^1.1.3",
+    "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.0",
     "eslint": "^3.11.0",
     "eslint-loader": "^1.6.1",
