--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/fknussel/custom-scripts#readme",
   "dependencies": {
     "autoprefixer": "^6.5.2",
+    "babel-cli": "^6.22.2",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
