--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.0",
