--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": ">=4"
+    "node": "~6.9.5"
   },
   "repository": {
     "type": "git",
@@ -28,12 +28,10 @@
   "homepage": "https://github.com/fknussel/custom-scripts#readme",
   "dependencies": {
     "autoprefixer": "^6.5.2",
-    "babel-cli": "^6.22.2",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.0",
