--- a/package.json
+++ b/package.json
@@ -47,15 +47,19 @@
     "postcss-loader": "^1.1.0",
     "postcss-modules-values": "^1.1.3",
     "precss": "^1.4.0",
-    "react-hot-loader": "3.0.0-beta.6",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
     "stylelint": "^7.5.0",
     "stylelint-config-standard": "16.0.0",
     "stylelint-order": "^0.2.2",
-    "stylelint-webpack-plugin": "0.5.1",
+    "stylelint-webpack-plugin": "^0.6.0",
     "url-loader": "^0.5.7",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0",
     "webpack-version-file": "^0.1.2"
+  },
+  "peerDependencies": {
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   }
 }
