--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss-loader": "^1.1.0",
     "postcss-modules-values": "^1.1.3",
     "precss": "^1.4.0",
+    "react-dev-utils": "^0.5.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
     "stylelint": "^7.5.0",
