--- a/package.json
+++ b/package.json
@@ -27,37 +27,37 @@
   },
   "homepage": "https://github.com/fknussel/custom-scripts#readme",
   "dependencies": {
-    "autoprefixer": "^6.5.2",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
+    "autoprefixer": "^6.7.4",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^1.1.3",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.0",
-    "eslint": "^3.11.0",
+    "eslint": "^3.16.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.6.0",
+    "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "0.10.0",
     "fs-extra": "^2.0.0",
     "lodash": "^4.17.4",
-    "postcss-loader": "^1.1.0",
+    "postcss-loader": "^1.3.1",
     "postcss-modules-values": "^1.1.3",
     "precss": "^1.4.0",
     "react-dev-utils": "^0.5.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.5.0",
+    "stylelint": "^7.9.0",
     "stylelint-config-standard": "16.0.0",
-    "stylelint-order": "^0.2.2",
+    "stylelint-order": "^0.3.0",
     "stylelint-webpack-plugin": "^0.6.0",
     "url-loader": "^0.5.7",
     "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0",
-    "webpack-version-file": "^0.1.2"
+    "webpack-dev-server": "^2.4.1",
+    "webpack-version-file": "github:fknussel/webpack-version-file"
   },
   "peerDependencies": {
     "react": "^15.4.1",
