--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/fknussel/custom-scripts#readme",
   "dependencies": {
-    "autoprefixer": "^6.7.4",
+    "autoprefixer": "^6.7.5",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.18.0",
@@ -37,7 +37,7 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.0",
     "eslint": "^3.16.0",
-    "eslint-loader": "github:fknussel/eslint-loader",
+    "eslint-loader": "^1.6.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
