--- a/package.json
+++ b/package.json
@@ -27,34 +27,34 @@
   },
   "homepage": "https://github.com/fknussel/custom-scripts#readme",
   "dependencies": {
-    "autoprefixer": "^6.7.5",
+    "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^7.0.0-alpha.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^1.1.3",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.26.0",
-    "eslint": "^3.16.0",
+    "cross-spawn": "^5.1.0",
+    "css-loader": "^0.26.2",
+    "eslint": "^3.17.0",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "2.0.0-rc.3",
-    "file-loader": "0.10.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "fs-extra": "^2.0.0",
     "lodash": "^4.17.4",
-    "postcss-loader": "^1.3.1",
+    "postcss-loader": "^1.3.3",
     "postcss-modules-values": "^1.1.3",
     "precss": "^1.4.0",
-    "react-dev-utils": "^0.5.0",
+    "react-dev-utils": "^0.5.1",
     "react-hot-loader": "^3.0.0-beta.6",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "16.0.0",
     "stylelint-order": "^0.3.0",
-    "stylelint-webpack-plugin": "^0.6.0",
-    "url-loader": "^0.5.7",
+    "stylelint-webpack-plugin": "^0.7.0",
+    "url-loader": "^0.5.8",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-version-file": "github:fknussel/webpack-version-file"
