--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "url-loader": "^0.5.8",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-version-file": "github:fknussel/webpack-version-file"
+    "webpack-version-file": "^0.1.3"
   },
   "peerDependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
