--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
     "babel-loader": "^7.0.0-alpha.2",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
@@ -57,7 +58,8 @@
     "url-loader": "^0.5.8",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-version-file": "^0.1.3"
+    "webpack-version-file": "^0.1.3",
+    "whatwg-fetch": "^2.0.3"
   },
   "peerDependencies": {
     "react": "^15.4.2",
