--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "url-loader": "^0.5.8",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.4.1",
+    "webpack-manifest-plugin": "^1.1.2",
     "webpack-version-file": "^0.1.3",
     "whatwg-fetch": "^2.0.3"
   },
